--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -149,24 +149,71 @@
           "1": "Dahili güvenlik özellikleri ve koruma devreleri",
           "2": "Uzun döngü ömrü ve güvenilir güç çıkışı"
         },
-        "description": {
-          "0": "Detaylı güvenlik kılavuzları ve doğru kullanım talimatları",
-          "1": "Çevresel etki ve geri dönüşüm bilgileri",
-          "2": "Teknik özellikler ve performans metrikleri"
+        "healthAndSafety": {
+          "title": "Sağlık ve Güvenlik Önlemleri",
+          "measures": {
+            "0": "Aküleri her zaman dikkatli taşıyın",
+            "1": "Her zaman dik konumda tutun",
+            "2": "İyi havalandırılan bir yerde şarj edin",
+            "3": "Saf su eklemeyin (Saf su seviyesi plakaların 1.5 cm üzerinde olmamalıdır)",
+            "4": "Akü bakımı sırasında (su ekleme, temizlik, şarj) mutlaka çalışma koşullarına uygun koruyucu gözlük takın",
+            "5": "Asit sıçrama riski varsa koruyucu giysi giyin"
+          }
+        },
+        "storage": {
+          "title": "Depolama ve Kurulum Kılavuzu",
+          "sections": {
+            "generalStorage": "Genel Depolama",
+            "chargeLevelMonitoring": "Şarj Seviyesi İzleme",
+            "installationSteps": "Kurulum Adımları",
+            "items": {
+              "generalStorage": {
+                "0": "Her zaman kuru ve serin bir yerde dik konumda saklayın (10°C - 25°C)",
+                "1": "Beton zeminle doğrudan temas etmemesi için aküleri ahşap palet üzerine yerleştirin"
+              },
+              "chargeLevelMonitoring": {
+                "0": "Satış öncesi akü şarj seviyesi 12.6V'dan yüksek olmalıdır",
+                "1": "Depolama sırasında minimum voltaj 12.4V olmalıdır",
+                "2": "Kalıcı hasarı önlemek için voltaj düşükse, paketi açın ve 16.1V ve 1/20Cn akımda şarj edin"
+              },
+              "installationSteps": {
+                "0": "Araç kılavuzundan akü uyumluluğunu doğrulayın",
+                "1": "Motorun kapalı olduğundan emin olun",
+                "2": "Eski aküyü çıkarın (önce negatif terminal)",
+                "3": "Kısa devre kontrolü yapın",
+                "4": "Akü bölmesini ve terminalleri temizleyin",
+                "5": "Yeni aküyü takın (önce pozitif kabloyu bağlayın)",
+                "6": "Şarj akımı uyumluluğunu kontrol edin"
+              }
+            }
+          }
+        },
+        "emergencyProcedures": {
+          "title": "Acil Durum Prosedürleri",
+          "procedures": {
+            "0": "Göz veya cilt teması durumunda bol su ile yıkayın",
+            "1": "Kirlenmiş giysileri hemen çıkarın",
+            "2": "Yutma: Bol su ve süt için. Bir doktora danışın",
+            "3": "Dökülme: Küçük dökülmeleri su ile yıkayın",
+            "4": "Çalışan aküler yüksek derecede yanıcı hidrojen ve oksijen gazları yayar",
+            "5": "Şarj olan, araç üzerinde çalışan veya uzun süreli çalışma sonrası duran akülerin yakınında sigara içmeyin veya kıvılcıma neden olabilecek kaynaklardan ve eylemlerden kaçının",
+            "6": "Ateşten uzak tutun",
+            "7": "Tüm cihazları büyük dikkatle kullanın"
+          }
         }
       },
       "textile": {
-        "features": {
-          "0": "Yüksek kaliteli sürdürülebilir malzemeler",
-          "1": "Çevre dostu üretim süreci",
-          "2": "Sertifikalı organik bileşenler"
-        },
-        "description": {
-          "0": "Malzeme kompozisyonu ve bakım talimatları",
-          "1": "Çevresel etki değerlendirmesi",
-          "2": "Sürdürülebilirlik sertifikaları"
+        "careInstructions": {
+          "title": "Bakım Talimatları",
+          "washing": "Yıkama",
+          "drying": "Kurutma",
+          "ironing": "Ütüleme",
+          "bleaching": "Ağartma",
+          "dryClean": "Kuru Temizleme",
+          "specialCare": "Özel Bakım Notları"
         }
       },
+      "layoutNotAvailable": "Bu ürün tipi için DPP düzeni mevcut değil:",
       "quickInfo": {
         "title": "Hızlı Bilgi",
         "model": "Model",
@@ -196,42 +243,6 @@
           "1": "Aşırı sıcaklıklardan ve nemden uzak tutun",
           "2": "Kullanım sırasında uygun kişisel koruyucu ekipman kullanın",
           "3": "Düzenli bakım ve kontrol gereklidir"
-        }
-      },
-      "emergencyProcedures": {
-        "title": "Acil Durum Prosedürleri",
-        "0": "Hasar durumunda hemen bağlantıyı kesin ve izole edin",
-        "1": "Sızıntı veya yangın durumunda acil servisleri arayın",
-        "2": "Hasarlı ürünler için uygun imha prosedürlerini uygulayın",
-        "3": "Güvenlik olaylarını belgeleyin ve raporlayın"
-      },
-      "storageAndInstallation": {
-        "title": "Depolama ve Kurulum",
-        "sections": {
-          "generalStorage": {
-            "title": "Genel Depolama Kılavuzu",
-            "items": {
-              "0": "Serin ve kuru bir yerde saklayın",
-              "1": "Doğrudan güneş ışığından ve ısı kaynaklarından kaçının",
-              "2": "Uygun havalandırmayı sağlayın"
-            }
-          },
-          "chargeLevel": {
-            "title": "Şarj Seviyesi Yönetimi",
-            "items": {
-              "0": "Önerilen şarj seviyelerini koruyun",
-              "1": "Optimum performans için düzenli şarj döngüleri uygulayın",
-              "2": "Tam deşarjdan kaçının"
-            }
-          },
-          "installation": {
-            "title": "Kurulum Gereksinimleri",
-            "items": {
-              "0": "Üretici özelliklerini takip edin",
-              "1": "Profesyonel kurulum önerilir",
-              "2": "Düzenli bakım kontrolleri gereklidir"
-            }
-          }
         }
       },
       "certifications": {
@@ -269,6 +280,35 @@
         "title": "Ürün QR Kodu",
         "description": "Ürün orijinalliğini doğrulamak ve detaylı bilgiye erişmek için bu QR kodu tarayın",
         "instructions": "Akıllı telefonunuzun kamerasını veya QR kod okuyucu uygulamasını kullanın"
+      }
+    }
+  },
+  "auth": {
+    "createAccount": {
+      "title": "Hesap Oluştur",
+      "name": "Ad Soyad",
+      "email": "E-posta",
+      "password": "Şifre",
+      "register": "Kayıt Ol",
+      "alreadyHaveAccount": "Zaten hesabınız var mı?",
+      "login": "Giriş Yap",
+      "validation": {
+        "nameMin": "Ad Soyad en az 2 karakter olmalıdır",
+        "emailInvalid": "Lütfen geçerli bir e-posta adresi girin",
+        "passwordMin": "Şifre en az 6 karakter olmalıdır"
+      },
+      "placeholders": {
+        "name": "Ad Soyad",
+        "email": "ornek@firma.com",
+        "password": "******"
+      },
+      "success": {
+        "title": "Hesap başarıyla oluşturuldu",
+        "description": "Lütfen e-posta adresinizi doğrulayın"
+      },
+      "error": {
+        "title": "Hesap oluşturulurken hata oluştu",
+        "description": "Lütfen tekrar deneyin"
       }
     }
   }
